--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 <main>
     <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
+        <button> type="button"</button>
     </section>
     <section>
         <!--<h2>  </h2>-->
