--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <main>
     <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
-        <button> type="button"</button>
+        <button type="button">Заказать услугу</button>
     </section>
     <section>
         <!--<h2>  </h2>-->
