--- a/index.html
+++ b/index.html
@@ -87,12 +87,11 @@
 
 <footer>
     <a href=""><span>Web</span><span>Studio</span></a>
-    <address>г. Киев, пр-т Леси Украинки, 26</address>
-        <ul>
+    <ul>
+            <li><address>г. Киев, пр-т Леси Украинки, 26</address></li>
             <li><a href="mailto: info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
-
 </footer>
 
 
